Remove last tabs from homepage search block. Fixed overlap. Fixed horizontal scroll in Location item.

--- a/wp-content/themes/wp-reddoor/static/styles/src/widgets.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/widgets.less
@@ -416,6 +416,13 @@
   }
 }
 
+.page-id-283651{
+  .upToHeader{
+    top: 0;
+  }
+}
+
+
 
 /**
  * WIDGET class 'hero-content'
