--- a/wp-content/themes/wp-reddoor/static/styles/style.css
+++ b/wp-content/themes/wp-reddoor/static/styles/style.css
@@ -936,9 +936,6 @@ a:focus {
   width: 100%;
   z-index: 8;
 }
-.select2-dropdown {
-  width: 440px !important;
-}
 .select2-dropdown .select2-results__option {
   height: 48px;
   border-bottom: 1px solid #e6e6e6;
@@ -1641,7 +1638,7 @@ input[type="radio"].styled-checkbox-radio:checked + label::before {
   font-size: 1.2em;
 }
 .single-property .areaMapBlock .col-lg-7 {
-  margin: 15px 0;
+  margin: 0 0 15px 0;
 }
 .single-property .areaMapBlock .singleWalkScore {
   margin-top: 25px;
@@ -1820,7 +1817,7 @@ input[type="radio"].styled-checkbox-radio:checked + label::before {
   border-bottom: 1px solid #dedede;
 }
 .single-property .listingProvider .col-lg-8 {
-  margin: 15px 0;
+  margin: 0 0 15px 0;
 }
 .single-property .listingProvider .col-lg-8 ul {
   width: 40%;
@@ -2281,6 +2278,9 @@ input[type="radio"].styled-checkbox-radio:checked + label::before {
 .full-width-totop .masthead .so-widget-sow-hero {
   top: -30px;
   margin-bottom: -30px;
+}
+.page-id-283651 .upToHeader {
+  top: 0;
 }
 /**
  * WIDGET class 'hero-content'
@@ -6599,7 +6599,6 @@ body .ui-tooltip {
   }
   .home .select2-dropdown {
     margin-top: -1px;
-    width: 539px !important;
   }
   .so-widget-tabbed-content .sow-slider-base {
     display: none !important;
@@ -6669,6 +6668,9 @@ body .ui-tooltip {
   }
 }
 @media screen and (max-width: 560px) {
+  body .frontPageSearchBlock {
+    min-height: 900px;
+  }
   body .frontPageSearchBlock .searchForm {
     min-width: 100%;
   }
@@ -6682,8 +6684,18 @@ body .ui-tooltip {
     width: 49.2%;
     display: flex;
   }
+  body .frontPageSearchBlock .searchForm > ul:first-child {
+    width: 100%;
+  }
+  body .frontPageSearchBlock .searchForm > ul:first-child > li {
+    width: 50%;
+  }
   body .frontPageSearchBlock .searchForm > ul > li {
     width: 48.3%;
+  }
+  body .frontPageSearchBlock .searchForm .sellBtnForm,
+  body .frontPageSearchBlock .searchForm .rentPropBtnForm {
+    display: none;
   }
 }
 @media screen and (max-width: 400px) {
